--- a/package.json
+++ b/package.json
@@ -11,18 +11,27 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.5",
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.9.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
+    "@mui/lab": "^5.0.0-alpha.83",
     "@mui/material": "^5.8.1",
     "@mui/styles": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
+    "graphql": "^16.5.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.52.1",
     "yup": "^0.32.11"
   },
@@ -48,5 +57,11 @@
   "lint-staged": {
     "*.js": "eslint --cache --fix",
     "*.ts": "prettier --write"
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "NEXT_PUBLIC_URI",
+      "KEY_MAPS"
+    ]
   }
 }
